1998-09-27  Yo Ric Dude  <ericmit@ix.netcom.com>

	* configure.in: `AC_PROG_RANLIB' is rendered obsolete by `AM_PROG_LIBTOOL'

	* esdlib.c: added the missing esd_close() function.  no need for 
	clients to know they're dealing with a socket.

1998-09-25  Mandrake <mandrake@mandrake.net>

	* autogen.sh: added libtoolize --copy --force to autogen.sh per
	Andreas Jellinghaus <aj@dungeon.inka.de>

1998-09-26  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c: artistic changes 

	* configure.in: add check for nanosleep, Solaris needs -lposix4.
 	Also included potentially useful information for obtaining the
 	audiofile library.

	* esd.c: forced a wait in esd.c while in standby mode, so there's
	still some CPU to go around.

	* esound.spec: version number update, maybe make a esound.spec.in?

Wed Sep 23 13:05:11 CDT 1998  mej <mej@mw.3com.com>

	* clients.c, configure.in - Fixes needed to find FIONBIO macro,
	  at least on Solaris
	
1998-09-23  Kimball Thurston <kimball@sgrail.com>

	* clients.c - Make sure that the socket when connected is marked
	  as non-blocking

	* audio_irix.c - Fix to reset the output rate every time a sample
	  is played, so other utilities that play sounds and rudely
	  change the output rate on SGI systems can't mess with esd too
	  much

1998-09-22  Yo Ric Dude  <ericmit@ix.netcom.com>

	* AUTHORS, TODO: updates/formatting

	* acconfig.h, audio.c, audio_alsa.c, configure.in: "New" ALSA
 	driver detection courtesy of Bibek Sahu.

1998-09-20  Yo Ric Dude  <ericmit@ix.netcom.com>

	* configure.in: made esdplay a --enable-able option, that was fun.
	let's bump up the revision level here, too, while we're at it.

	* esd.c, mix.c, samples.c: i think i've got the 8bit stuff working,
	but it needs to be cleaned up, and preferably use function pointers 
	over if-else blocks to pick the appropriate 8bit/16bit algorithms.

1998-09-19  Yo Ric Dude  <ericmit@ix.netcom.com>

	* AUTHORS: decided to add my own name to the file, so people can